--- a/flask/app/templates/commodities.html
+++ b/flask/app/templates/commodities.html
@@ -4,6 +4,19 @@
     
 {% block title %}CPA-Commodities{% endblock %}
 
+{% block bar %}
+<ul class="nav navbar-nav navbar-left">
+    <li><a href="home.html">Home</a></li>
+    <li class="dropdown active"><a href="commodities.html">Commodities<span class="caret"></span></a>
+    <ul class="dropdown-menu">
+    <li><a href="boi.html">Boi Gordo</a></li>
+    <li><a href="cafe.html">Café Arabica 4/5</a></li>
+    <li><a href="milho.html">Milho</a></li>
+    <li><a href="soja.html">Soja</a></li>
+</ul>
+    <li><a href="analytics.html">Analytics</a></li>
+{% endblock %}
+
 {% block content %}
 <body class="corpo">
      <!-- --------------------------Intro -------------------------- -->
@@ -11,7 +24,7 @@
         <div class="row">
             <div class="col-sm-5" style="padding: 0 0 20px 0; ">
                 <h1>Commodities</h1>
-                <p> <!--Commodities são todas as matérias-primas essenciais que possuem baixo nível de industrialização. Elas são produzidas em grande quantidade sem diferenças entre marcas e podem ser estocadas sem perda de qualidade como o petróleo, o trigo, o milho, buebfwehfhoene ESCREVER UM TEXTO DE INTRODUÇÃO SOBRE COMMODITIESAAAAAAAAAAAAAAAAAAAAAAAAA--> <b>Commodities</b> vem do inglês e significa <b>Mercadoria</b>, são produtos que desempenham o papel de matéria-prima, são produzidos em escala e podem ser estocados sem perda de qualidade. Dessa maneira, seu preço é determinado pelo mercado mundial, sendo uma consequência da oferta e da demanda. O termo <i>"commoditie"</i>, apesar de significar qualquer tipo de mercadoria, passou a ser largamente utilizado nas transações comerciais de produtos de base em estado bruto, ou com pequeno grau de industrialização, na bolsa de valores. O Brasil é um destaque na produção e exportação desse mercado, devido à sua extensão territorial e larga exploração de recursos naturais. O grande impacto deste mercado na economia brasileira explica a importância de se realizar pesquisas e análises neste segmento. </p>
+                <p> <b>Commodities</b> vem do inglês e significa <b>Mercadoria</b>, são produtos que desempenham o papel de matéria-prima, são produzidos em escala e podem ser estocados sem perda de qualidade. Dessa maneira, seu preço é determinado pelo mercado mundial, sendo uma consequência da oferta e da demanda. O termo <i>"commoditie"</i>, apesar de significar qualquer tipo de mercadoria, passou a ser largamente utilizado nas transações comerciais de produtos de base em estado bruto, ou com pequeno grau de industrialização, na bolsa de valores. O Brasil é um destaque na produção e exportação desse mercado, devido à sua extensão territorial e larga exploração de recursos naturais. O grande impacto deste mercado na economia brasileira explica a importância de se realizar pesquisas e análises neste segmento. </p>
             </div>
             <div class="col-sm-7 " style="padding: 12px 0 0 60px; ">
                 <h3>Ajuste do Pregão</h3>
