--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -4,6 +4,20 @@
     
 {% block title %}CPA-Analytics{% endblock %}
 
+{% block bar %}
+<ul class="nav navbar-nav navbar-left">
+    <li><a href="home.html">Home</a></li>
+    <li class="dropdown"><a href="commodities.html">Commodities<span class="caret"></span></a>
+    <ul class="dropdown-menu">
+    <li><a href="boi.html">Boi Gordo</a></li>
+    <li><a href="cafe.html">Café Arabica 4/5</a></li>
+    <li><a href="milho.html">Milho</a></li>
+    <li><a href="soja.html">Soja</a></li>
+</ul>
+<li class = "active"><a href="analytics.html">Analytics</a></li>
+{% endblock %}
+
+
 {% block content %}
 <body>
    
