--- a/flask/app/templates/boi.html
+++ b/flask/app/templates/boi.html
@@ -4,6 +4,15 @@
     
     {% block title %}CPA-Boi{% endblock %}
 
+{% block menu %}
+<ul class="dropdown-menu">
+    <li><a class = "active" href="boi.html">Boi Gordo</a></li>
+    <li><a href="cafe.html">Café Arabica 4/5</a></li>
+    <li><a href="milho.html">Milho</a></li>
+    <li><a href="soja.html">Soja</a></li>
+</ul>
+{% endblock %}
+
 {% block header %}
      <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
@@ -114,6 +123,11 @@
 </select>
 
 {% endblock %}
+
+{%block unidade1 %}R${% endblock %}
+{%block unidade2 %}R${% endblock %}
+{%block unidade3 %}R${% endblock %}
+
 
 </html>
 <script>
