--- a/flask/app/templates/cafe.html
+++ b/flask/app/templates/cafe.html
@@ -4,6 +4,15 @@
     
     {% block title %}CPA-Café{% endblock %}
 
+{% block menu %}
+<ul class="dropdown-menu">
+    <li><a href="boi.html">Boi Gordo</a></li>
+    <li><a class = "active" href="cafe.html">Café Arabica 4/5</a></li>
+    <li><a href="milho.html">Milho</a></li>
+    <li><a href="soja.html">Soja</a></li>
+</ul>
+{% endblock %}
+
 {% block header %}
 
     <!-- --------------------------Header -------------------------- -->
@@ -108,6 +117,10 @@
 </select>
 
 {% endblock %}
+
+{%block unidade1 %}U${% endblock %}
+{%block unidade2 %}U${% endblock %}
+{%block unidade3 %}U${% endblock %}
 
 </html>
 <script>
