--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -4,6 +4,19 @@
     
 {% block title %}CPA-Home{% endblock %}
 
+{% block bar %}
+<ul class="nav navbar-nav navbar-left">
+    <li class = "active"><a href="home.html">Home</a></li>
+    <li class="dropdown"><a href="commodities.html">Commodities<span class="caret"></span></a>
+    <ul class="dropdown-menu">
+    <li><a href="boi.html">Boi Gordo</a></li>
+    <li><a href="cafe.html">Café Arabica 4/5</a></li>
+    <li><a href="milho.html">Milho</a></li>
+    <li><a href="soja.html">Soja</a></li>
+</ul>
+    <li><a href="analytics.html">Analytics</a></li>
+{% endblock %}
+
 {% block content %}
     <!-- ----------------------Carrosel ------------------------- -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
