--- a/flask/app/templates/soja.html
+++ b/flask/app/templates/soja.html
@@ -4,6 +4,14 @@
     
 {% block title %}CPA-Soja{% endblock %}
 
+{% block menu %}
+<ul class="dropdown-menu">
+    <li><a href="boi.html">Boi Gordo</a></li>
+    <li><a href="cafe.html">Café Arabica 4/5</a></li>
+    <li><a href="milho.html">Milho</a></li>
+    <li><a class = "active" href="soja.html">Soja</a></li>
+</ul>
+{% endblock %}
 
 {% block header %}
 <!-- --------------------------Header -------------------------- -->
@@ -108,6 +116,10 @@
 </select>
 
 {% endblock %}
+
+{%block unidade1 %}U${% endblock %}
+{%block unidade2 %}U${% endblock %}
+{%block unidade3 %}U${% endblock %}
 
 </html>
 <script>
