--- a/flask/app/templates/navbar.html
+++ b/flask/app/templates/navbar.html
@@ -33,7 +33,7 @@
       </ul>
         <ul class="nav navbar-nav navbar-right">
             {% if session.logged_in %}
-            <li class="menu-login"><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
+            <li class="menu-login"><a href="painel.html"><span class="glyphicon glyphicon-cog"></span></a></li>
             {% endif %}
             <li class="menu-login"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
