--- a/flask/app/templates/ajusteTable.html
+++ b/flask/app/templates/ajusteTable.html
@@ -38,8 +38,10 @@
         <ul class="nav navbar-nav navbar-right">
             {% if session.logged_in %}
             <li class="menu-login"><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
-            {% endif %}
+            <li class="menu-login"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            {% else %}
             <li class="menu-login"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            {% endif %}
         </ul>
         
     </div>
