--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -117,9 +117,9 @@
 
 {% endblock %}
 
-{%block unidade1 %}R${% endblock %}
-{%block unidade2 %}R${% endblock %}
-{%block unidade3 %}R${% endblock %}
+{%block unidade1 %}(R$){% endblock %}
+{%block unidade2 %}(R$){% endblock %}
+{%block unidade3 %}(R$){% endblock %}
 
 
 </html>
