--- a/flask/app/templates/soja.html
+++ b/flask/app/templates/soja.html
@@ -117,9 +117,9 @@
 
 {% endblock %}
 
-{%block unidade1 %}U${% endblock %}
-{%block unidade2 %}U${% endblock %}
-{%block unidade3 %}U${% endblock %}
+{%block unidade1 %}(U$){% endblock %}
+{%block unidade2 %}(U$){% endblock %}
+{%block unidade3 %}(U$){% endblock %}
 
 </html>
 <script>
