arrumei a tabela do milho

--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -54,40 +54,40 @@
           <div class="panel-body">
             <table id="infoTable">
                 <tr>
-                    <th><b>Objeto de negociação</b> </th>
-                    <th>Milho em grão a granel, com odor e aspectos normais, duro ou semiduro e amarelo.</th>
+                    <td><b>Objeto de negociação</b> </td>
+                    <td>Milho em grão a granel, com odor e aspectos normais, duro ou semiduro e amarelo.</td>
                 </tr>
                 <tr>
-                    <th><b>Código de negociação</b> </th>
-                    <th>CCM</th>
+                    <td><b>Código de negociação</b> </td>
+                    <td>CCM</td>
                 </tr>
                 <tr>
-                    <th><b>Tamanho do contrato</b> </th>
-                    <th>450 sacas de 60kg líquidos (equivalentes a 27 toneladas métricas).</th>
+                    <td><b>Tamanho do contrato</b> </td>
+                    <td>450 sacas de 60kg líquidos (equivalentes a 27 toneladas métricas).</td>
                 </tr>
                 <tr>
-                    <th><b>Cotação</b> </th>
-                    <th>Reais por saca, com duas casas decimais.</th>
+                    <td><b>Cotação</b> </td>
+                    <td>Reais por saca, com duas casas decimais.</td>
                 </tr>
                 <tr>
-                    <th><b>Variação mínima de apregoação</b> </th>
-                    <th>R$0,01</th>
+                    <td><b>Variação mínima de apregoação</b> </td>
+                    <td>R$0,01</td>
                 </tr>
                 <tr>
-                    <th><b>Lote padrão</b> </th>
-                    <th>1 contrato.</th>
+                    <td><b>Lote padrão</b> </td>
+                    <td>1 contrato.</td>
                 </tr>
                 <tr>
-                    <th><b>Último dia de negociação</b> </th>
-                    <th>Dia 15 do mês de vencimento.</th>
+                    <td><b>Último dia de negociação</b> </td>
+                    <td>Dia 15 do mês de vencimento.</td>
                 </tr>
                 <tr>
-                    <th><b>Data de vencimento</b> </th>
-                    <th>Dia 15 do mês de vencimento. Caso não haja sessão de negociação, a data de vencimento será a próxima sessão de negociação.</th>
+                    <td><b>Data de vencimento</b> </td>
+                    <td>Dia 15 do mês de vencimento. Caso não haja sessão de negociação, a data de vencimento será a próxima sessão de negociação.</td>
                 </tr>
                 <tr>
-                    <th><b>Meses de vencimento</b> </th>
-                    <th>Janeiro, março, maio, julho, agosto, setembro e novembro.</th>
+                    <td><b>Meses de vencimento</b> </td>
+                    <td>Janeiro, março, maio, julho, agosto, setembro e novembro.</td>
                 </tr>
                 <tr>
                     <th><b>Liquidação no vencimento</b> </th>
