candlestick + filtros por ano de vencimento

--- a/flask/app/templates/boi.html
+++ b/flask/app/templates/boi.html
@@ -106,7 +106,7 @@
 
 {% block select %}
 
-<select name = "vencimento" class="formSelec">
+<select id = "inputMes" name = "vencimento" class="formSelec">
     <option value = "all">Todos</option>
     <option value = "F">Janeiro</option>
     <option value = "G">Fevereiro</option>
