--- a/flask/app/templates/soja.html
+++ b/flask/app/templates/soja.html
@@ -103,7 +103,7 @@
 
 {% block select %}
 
-<select name = "vencimento" class="formSelec">
+<select id = "inputMes" name = "vencimento" class="formSelec">
     <option value = "all">Todos</option>
     <option value = "H">Março</option>                
     <option value = "J">Abril</option>
