--- a/flask/app/templates/ajusteTable.html
+++ b/flask/app/templates/ajusteTable.html
@@ -72,8 +72,9 @@
             {% block select %}
             {% endblock %}
             <label class="titleForm"> Ano: </label>
-            <select name = "frequencia" class="formSelec">
-                <option value = "D">Todos</option>
+            <select id = "ano" name = "ano" class="formSelec">
+                <option value = 'all'>Todos</option>
+
             </select> 
             <label class="titleForm"> Frequência: </label>
             <select name = "frequencia" class="formSelec" id="freq" onchange="addInput()">
@@ -122,7 +123,7 @@
                   <h4 class="modal-title">Opções de Gráficos</h4>
                 </div>
                 <div class="modal-body">
-                	<form method="post" action="{{ url_for('lines') }}" target="_blank">
+                	<form method="post" action="{{ url_for('graph') }}" target="_blank">
                     	<button name = "linhas" value="True" class="btn btn-default modBtn"> <img src="../static/imagens/line" width="35"> Gráfico de Linhas</button>
                     	<button name = "velas" value="True" class="btn btn-default modBtn"> <img src="../static/imagens/candlestick.png" width="35">  Gráfico de Velas</button>
                     </form>    
