--- a/flask/app/templates/cafe.html
+++ b/flask/app/templates/cafe.html
@@ -107,7 +107,7 @@
 
 {% block select %}
 
-<select name = "vencimento" class="formSelec">
+<select id = "inputMes" name = "vencimento" class="formSelec">
     <option value = "all">Todos</option>
     <option value = "H">Março</option>                
     <option value = "K">Maio</option>
