--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -104,7 +104,7 @@
 
 {% block select %}
 
-<select name = "vencimento" class="formSelec">
+<select id = "inputMes" name = "vencimento" class="formSelec">
     <option value = "all">Todos</option>
     <option value = "F">Janeiro</option>
     <option value = "H">Março</option>                
