--- a/flask/app/templates/ajusteTable.html
+++ b/flask/app/templates/ajusteTable.html
@@ -11,6 +11,7 @@
           <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
           <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
           <script src="{{ url_for('static', filename='js/ajax.js') }}"></script>
+          <script src="{{ url_for('static', filename='js/csv.js') }}"></script>          
       <!--  <script type="text/javascript" src="login.js"></script>-->
 </head>
 <!-- ----------------------Menu ------------------------- -->
@@ -111,7 +112,7 @@
         </table>
         <div id="graphDown" style="float: right">
             <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue"> <i class='fas fa-chart-line'></i> Gráficos</button>
-            <button type="button" class="myBtn"><i class="fas fa-download       "> </i> Download</button>
+            <button onclick = "makeCSV()" type="button" class="myBtn"><i class="fas fa-download       "> </i> Download</button>
         </div>
         
         <div class="modal fade" id="opGrafico" role="dialog">
