redefinição do checkbox

--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -354,3 +354,91 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+/* ----------------Analises----------------------------------------------------------- */
+.analiseBody{
+    font-family: "Georgia", serif !important;
+    padding-left: 20px;
+    margin-top: 50px;
+}
+.calc{
+    font-size: 1.2em;
+}
+.panel-group{
+    width: 30%;
+}
+
+.heading2{
+    background-color: #eee !important;
+    font-size: 0.9em;
+}
+.panel-group2 a{
+    color: black;
+    text-decoration: none;
+}
+/* ----------------Redefinição do checkbox----------------------------------------------------------- */
+.calculos {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 1.2em;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.calculos input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.calculos:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.calculos input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.calculos input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.calculos .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
