--- a/flask/app/templates/navbar.html
+++ b/flask/app/templates/navbar.html
@@ -8,7 +8,9 @@
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+          <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
           <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+          <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
           <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
       <!--  <script type="text/javascript" src="login.js"></script>-->
     {% endblock %}
