--- a/flask/app/templates/candle.html
+++ b/flask/app/templates/candle.html
@@ -25,10 +25,26 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <script type="text/javascript">
+
+        function editDate(data) {
+            return data.slice(8,10) + "/" + data.slice(5,7) + "/" + data.slice(0,4);
+        }
           
         function candle(graph) {
 
+            var data1 = localStorage.getItem('data1');
+            var data2 = localStorage.getItem('data2');
+            var vencimento  = localStorage.getItem('vencimento');
+            var title;
+
+            if (data2.length != 0) {
+                title = "Período de " + editDate(data1) + " à " + editDate(data2) + " - Referente ao vencimento " + vencimento;
+            } else {
+                title = "Data: " + data1 + " - Referente ao vencimento " + vencimento;
+            }
+
             var layout = {
+                title: title,
                 'yaxis' : {
                     tickformat :".2f"
                 },
