--- a/flask/app/templates/lines.html
+++ b/flask/app/templates/lines.html
@@ -25,10 +25,26 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <script type="text/javascript">
+
+        function editDate(data) {
+            return data.slice(8,10) + "/" + data.slice(5,7) + "/" + data.slice(0,4);
+        }
           
         function line(graph) {
 
-            var layout = {};
+            var data1 = localStorage.getItem('data1');
+            var data2 = localStorage.getItem('data2');
+            var title;
+
+            if (data2.length != 0) {
+                title = "Período de " + editDate(data1) + " à " + editDate(data2);
+            } else {
+                title = "Data: " + data1;
+            }
+
+            var layout = {
+                title: title
+            };
 
             Plotly.newPlot('chart', graph, layout);
 
